fixed paddings on tablet and desktop version

--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -7,10 +7,14 @@
 
   @media (min-width: @tablet-width) {
     max-width: @tablet-width;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   @media (min-width: @desktop-width) {
     max-width: @desktop-width;
+    padding-left: 120px;
+    padding-right: 120px;
   }
 }
 
@@ -158,6 +162,9 @@
 }
 
 .feedback__fieldset--emotions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 56px;
   @media (min-width: @tablet-width) {
     grid-column: 1 / 3;
